--- a/TODO.txt
+++ b/TODO.txt
@@ -26,14 +26,11 @@
     EPS / price
 
 3. Determine per share earnings growth rate. 
-    Done using regression. 
     Now need to use cash flow method (EPS - dividends, compound using ROE)
     
-4. Determine value of company relative to gov bonds
-    
+4. Determine value of company relative to gov bonds    
 
-5. Determine the best/worst cases stock price using historical PE
-    
+5. Determine the best/worst cases stock price using historical PE    
 
 6. Determine annual return compounding rate
     Use the geometric series formula to figure out growth rate
@@ -43,72 +40,18 @@
         
 http://financials.morningstar.com/ajax/ReportProcess4CSV.html?t=TWTR&reportType=cf&period=12&dataType=A&order=asc&columnYear=10&number=3
 
-20180813:   To create sample data for step 0 first. Then run steps 1 to 8. 
-20180814:   Done for YZJ and Keppel. 
-TODO:
-    Include DBS and Visa. Copy over proper headers in the data
-    Change
-    Include EOY exchange rates to SGD
-    
-======================
-2018 December 19th
-Here is the plan. Conceptually, here's what I want to do
-1. Grab data from MS into a CSV file.
-2. Extract the strings of what to plot
-3. Extract the numbers to plot
-4. Plot the financials
-5. Visually inspect the numbers and decide on sensible ones
-6. Generate predicted numbers
-7. Do a DCF to calculate present value
-
-
-1. 
-INPUT: MS URL of company financials, company name and year
-OUTPUT: CSV file dumped into folder called company name + year
-
-2.
-INPUT: CSV file and company name + year
-OUTPUT: list of strings
-
-3. 
-INPUT: CSV file and company name + year
-OUTPUT: list of lists of financials
-
-4.
-INPUT: list of strings and list of (lists of financials)
-OUTPUT: None. Prints plots, save to folder
-
-5.
-INPUT: MANUAL step. Observe plots and guess numbers
-OUTPUT: List of numbers. (Dividend tax, PE, ROE, payout ratio, discount rate)
-
-6.
-INPUT: List of guessed numbers, list of strings, list of (list of financials)
-OUTPUT: Present value
-
-I have difficulty trying to rip out Morningstar PE ratios data.
-Therefore, let's just assume the data has been formatted in a way I want.
-To not get stuck in steps 1-3, create a test file to generate hardcoded test data first
-Proceed with step 4 onwards with the fake data
-
-Fake data needed.
-Year
-ROE
-FCF
-EPS
-Dividends
-Payout ratio
-BVPS
-number of shares
-PE ratio
-
-DONE WITH GENERATING FAKE DATA (generate_test_data.py)
-Next: Create nice plots overlaying one another in the window
-
 ======================
 2019 July 8th
 Used dictionaries to store the data instead of lists. More portable.
-
 Done extracting data from a csv
 Done generating some sample fake data
 Done doing the cash flow projections
+======================
+2019 July 9th
+Done creating the basic analysis tool.
+Can plug in DCF discount rate, estimates of future ROE and PE, and estimate present value
+Next steps
+1. automate the data extraction process from morningstar csv spreadsheets
+2. automate selection of the ROE and PE figure by taking 1SD below mean
+3. sweep the ROE, PE, make discount rate as a parameter
+   make family of 3D plots to see what returns to expect
